[package]
name = "raven_nav"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

[features]
default = []
view_mesh = []
debug_draw = [
    "bevy/bevy_gizmos",
    "bevy/bevy_render",    
]
trace = [
    "bevy/trace"
]

[dependencies]
bevy = "0.16"
#raven_bvh = { git = "https://github.com/slyedoc/raven_bvh.git", features = ["camera"] }
raven_bvh = { path = "../raven_bvh", features = ["camera"] }
avian3d = "0.3"
smallvec = { version = "1.15", default-features = false }
#thiserror = "1.0"
#disjoint = "0.8.0"
bevy-inspector-egui = { version = "0.31" }
crossbeam-channel = { version = "0.5" }
strum_macros = "0.27.1"
strum = "0.27.1"

[dev-dependencies]
bevy = "0.16"
avian3d = "0.3"
bevy_enhanced_input = "0.11"
#sly_editor = { git = "https://github.com/slyedoc/sly_editor.git", features = ["avian3d"]}
sly_editor = { path = "../sly_editor", features = ["avian3d"]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


[[example]]
name = "simple"
required-features = ["debug_draw"]

[[example]]
name = "heightfield"
required-features = ["debug_draw"]

[[example]]
name = "multi"
required-features = ["debug_draw"]

[[example]]
name = "agent"
required-features = ["debug_draw"]
